css/style.css
/* ... */
.nav .icon-home { padding: 0 24px 0 22px; font-size: 0; line-height: 0;}
.nav .icon-shere { margin-right: -7px; }
.nav ul ul { opacity: 0; filter:alpha(opacity=0); visibility: hidden; position: absolute; top: 80px; left: 0; min-width: 429px; padding: 21px 22px 20px 19px;  background: #ed1c24; margin: 0; }
.nav ul ul.ul_commitment {left: -254px;}
.nav ul ul.ul_care {left: -321px;}
.nav ul ul {
-webkit-transition: all 0.5s ease-in-out 0s;
   -moz-transition: all 0.5s ease-in-out 0s;
    -ms-transition: all 0.5s ease-in-out 0s;
     -o-transition: all 0.5s ease-in-out 0s;
        transition: all 0.5s ease-in-out 0s;
}
.nav ul ul li { overflow: hidden; }
.nav .dropdown-text { float: left; width: 100%; padding-top: 7px; }
.nav .dropdown-text h5 { padding-bottom: 8px; }
.nav .dropdown-text p { font-size: 13px; line-height: 1.54; color: #fff; }
.nav .dropdown-image { float: right;}
.nav .dropdown-text a img { margin-left:10px;}

.nav li:hover ul { opacity: 1; filter:alpha(opacity=100); visibility: visible; }

.nav-mobile { display: none; }

/* ==========================================================================
	#Slider
========================================================================== */
.slider { position: relative; z-index: 1; overflow: hidden; width: 100%; height: 400px; margin-top: 80px;  }
.slides { list-style: none outside none; }
.slide { position: relative; height: 400px; width: 100%; float: left; cursor: default;}
.slide-image { height: 400px; }
.slide-text { position: absolute; top: 67px; margin: 0px auto; width: 420px; margin-left: -210px; text-align: center; }
.slide-text h2,
.slide-text p { color: #fff; }

.slide-text p,
.slide-text .btns span  { font-family: 'Myriad Pro'; }

.slide-text h2 { padding-bottom: 20px; /*text-align: left;*/ }
.slide-text p { font-size: 18px; line-height: 1.44; /*text-align: left;*/ }
.slide-text .lead { font-size: 20px; font-family: Helvetica, Arial, sans-serif; }
.slide-text .btns { padding-top: 18px; }
.slide-text .btns span { display: block; padding-top: 6px; color: #fff; font-size: 13px; }

.slide-text-bottom { top: auto; bottom: 0; left: 50%; width: 980px; margin-left: -490px; text-align: left; }
.slide-text-bottom h2 { font-size: 50px; color: #717275; }

.slider-controls { position: absolute; bottom: 40px; left: 50%; margin-left: -49px; }
.slider-controls-inner { position: relative; }

.slider .prev,
.slider .next { position: absolute; top: 4px; display: block; width: 10px; height: 16px; background: url(images/sprite.png) no-repeat 0 0; text-indent: 100%; overflow: hidden; white-space: nowrap; }

.slider .next { right: 0; background-position: -121px -403px; }
.slider .next:hover { background-position: -121px -372px; }

.slider .prev { left: 0;  background-position: -121px -465px; }
.slider .prev:hover { background-position: -121px -434px; }

.slider .paging { padding: 0 20px; }
.slider .paging a { display: inline-block; vertical-align: middle; height: 6px; width: 6px; border-radius: 100%; background: #fff; font-size: 0; line-height: 0; margin: 0 4px; }
.slider .paging .selected,
.slider .paging a:hover { background: #ed1c24; }

/* ==========================================================================
	#Sections
========================================================================== */
.section { min-height: 400px; background-position: center 0; background-repeat: no-repeat;  }
.section .shell { padding-top: 93px; }
.section p { font-size: 20px; line-height: 1.3; }
.section h2 { padding-bottom: 24px; }
.section .section-text { width: 510px; margin: 0 auto; }
.section-text { text-align: center; }
.section .btns { padding-top: 30px; }

.section .section-text-left { text-align: left; margin: 0; }

.section-gray { background-color: #e4e4e4; }
.section-gray .section-text { width: 534px; }

/*.section-expertise { background-image: url(images/section-expertise.jpg); }*/

.section-expertise .bg_doctores{ position: absolute; background-image: url(images/section-expertise-doctores.png); background-position: center; width: 100%; height: 400px; -webkit-transition: opacity 0.3s ease-in-out; -moz-transition: opacity 0.3s ease-in-out; -o-transition: opacity 0.3s ease-in-out; }
.section-expertise .bg_doctores_up{ position: absolute; background-image: url(images/section-expertise-doctores-up.png); background-position: center; width: 100%; height: 400px; -webkit-transition: opacity 0.3s ease-in-out; -moz-transition: opacity 0.3s ease-in-out; -o-transition: opacity 0.3s ease-in-out; opacity: 0; }
.section-expertise:hover .bg_doctores{ opacity: 0; }
.section-expertise:hover .bg_doctores_up{ opacity: 1; }
.section-expertise .section-text { padding-top: 6px; }
.section-expertise h2 { padding: 7px 0 22px; }
.section-expertise .btns { padding-top: 44px; }

.section-care { background-image: url(images/section-care.jpg); }
.section-commitment { background-image: url(images/section-commitment.jpg); background-position: right 0; }
.section-foresight { position: relative; padding-top: 0; }
.section-foresight .section-inner { position: relative; z-index: 2; background: url(images/section-foresight.jpg) no-repeat center -21px; }

.section-expertise,
.section-foresight p { font-family: 'Myriad Pro'; }

.section-foresight-background { position: absolute; top: 186px; left: 0; z-index: 1; display: block; width: 100%; height: 1px; background: #c8161d; }

/* ==========================================================================
	#Content
========================================================================== */
.content { padding: 25px 0 3px; background: #f3f3f3; }
.content h6 { padding-bottom: 7px; color: #ed1c24; }

/* ==========================================================================
	#Article
========================================================================== */
.article { position: relative; padding-bottom: 28px; }
.article h5 { padding-bottom: 6px; color: #717275; }
.article .text-black { color: #333; }
/* ... */

